<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.activity.main.MainActivity">

    <LinearLayout
        android:padding="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_marginTop="@dimen/_100sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:textAlignment="center"
            android:text="@string/selamat_datang_cari_peribahasan_kata_terkait_terjemahan_dan_glosarium"
            style="@style/text_reg_12"
            android:textColor="@color/dark"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/main_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/_8sdp"
            android:layout_margin="@dimen/_10sdp">
            <LinearLayout
                android:padding="@dimen/_5sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <androidx.appcompat.widget.SearchView
                    android:id="@+id/main_sv_kata"
                    app:queryHint="@string/masukan_phrasa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_margin="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:textColor="@color/dark"
                style="@style/text_bold_10"
                android:text="@string/riwayat_pencarian"/>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:textColor="@color/colorPrimary"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:text="@string/lihat_semuanya"
                android:gravity="center"
                style="@style/text_reg_10"/>
        </LinearLayout>


        <TextView
            android:textColor="@color/dark"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:text="@string/sumber_data"
            android:gravity="center"
            style="@style/text_reg_10"/>
    </LinearLayout>




</ScrollView>